correcion de casos de uso en Anexo

--- a/Informe Final/Capitulos/Anexo/Anexo.tex
+++ b/Informe Final/Capitulos/Anexo/Anexo.tex
@@ -90,10 +90,21 @@
 \input{Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/modificarLineaPresupuesto.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/borrarLineaPresupuesto.tex}
 
+%GestionVentas
+\input{Capitulos/Capitulo4/CasosUso/GestionVentas/buscarAvanzadoVentas.tex}
+\input{Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex}
+\input{Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex}
+
+\input{Capitulos/Capitulo4/CasosUso/GestionComprobantes/buscarAvanzadoComprobantes.tex}
+
 %GestionObservaciones
 \input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/crearObservacion.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/listarObservaciones.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/borrarObservacion.tex}
+
+\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex}
+\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/modificarOrdenProduccion.tex}
+\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/borrarOrdenProduccion.tex}
 
 %GestionLineasOrdenesProduccion
 \input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex}
