--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/borrarComprobante.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/borrarComprobante.tex
@@ -8,7 +8,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion borrar un comprobante de una venta.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere borrar una venta.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoComprobantes\ (Buscar avanzado comprobantes).} %Precondiciones
+	\caseUseRow{Haber realizado con éxito el CU88\ (Buscar avanzado comprobantes).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
