--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/buscarAvanzadoComprobantes.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionComprobantes/buscarAvanzadoComprobantes.tex
@@ -2,7 +2,7 @@
 
 \renewcommand{\caseUseCreated}{07/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{07/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUbuscarAvanzadoComprobantes - Buscar avanzado comprobantes} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU88 - Buscar avanzado comprobantes} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion buscar comprobantes a partir de una venta, número de comprobante, tipo de comprobante, un rango de fechas y estado.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere encontrar un comprobante existente en el sistema.} %Actor: Meta
