--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/borrarOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/borrarOrdenProduccion.tex
@@ -3,11 +3,11 @@
 
 \renewcommand{\caseUseCreated}{03/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{03/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUborrarOrdenProduccion - Borrar orden de producción} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU95 - Borrar orden de producción} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion borrar una orden de producción.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere borrar una orden de producción.} %Actor: Meta
-\renewcommand{\caseUsePreconditions}{\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoOrdenesProduccion\ (Buscar avanzado órdenes de producción).} %Precondiciones
+\renewcommand{\caseUsePreconditions}{\caseUseRow{Haber realizado con éxito el CU92\ (Buscar avanzado órdenes de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
