--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/modificarOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/modificarOrdenProduccion.tex
@@ -3,12 +3,12 @@
 
 \renewcommand{\caseUseCreated}{03/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{03/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUmodificarOrdenProduccion - Modificar orden de producción} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU93 - Modificar orden de producción} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion modificar una orden de producción} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere modificar una orden de producción.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoOrdenesProduccion\ (Buscar avanzado órdenes de producción).} %Precondiciones
+	\caseUseRow{Haber realizado con éxito el CU92\ (Buscar avanzado órdenes de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
