--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/borrarRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/borrarRemito.tex
@@ -2,7 +2,7 @@
 
 \renewcommand{\caseUseCreated}{08/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{08/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUborrarVenta - Borrar remito} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{\CUborrarRemito - Borrar remito} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion borrar un remito existente.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere borrar un remito existente en el sistema.} %Actor: Meta
