--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/buscarAvanzadoVentas.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/buscarAvanzadoVentas.tex
@@ -2,7 +2,7 @@
 
 \renewcommand{\caseUseCreated}{13/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{13/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUbuscarAvanzadoVentas - Buscar avanzado ventas} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU76 - Buscar avanzado ventas} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion buscar ventas a partir de un cliente, producto, estado y/o tela.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere encontrar una venta existente en el sistema.} %Actor: Meta
