--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex
@@ -3,12 +3,12 @@
 
 \renewcommand{\caseUseCreated}{13/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{13/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUmodificarVenta - Modificar venta} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU78 - Modificar venta} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor modificar una venta existente.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere modificar una venta existente.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoVentas\ (Buscar avanzado ventas).} %Precondiciones
+	\caseUseRow{Haber realizado con éxito el CU76\ (Buscar avanzado ventas).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
