--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/revisarVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/revisarVenta.tex
@@ -8,7 +8,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion revisar una venta en donde una de las líneas tiene el precio desactualizado para aceptar o rechazar su creación.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere aceptar o rechazar la creación de una venta con precio desactualizado.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoVentas\ (Buscar avanzado ventas).} %Precondiciones
+	\caseUseRow{Haber realizado con éxito el CU76\ (Buscar avanzado ventas).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
