--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex
@@ -2,7 +2,7 @@
 
 \renewcommand{\caseUseCreated}{05/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{05/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUbuscarAvanzadoOrdenesProduccion- Buscar avanzado órdenes de producción} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU92- Buscar avanzado órdenes de producción} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un fabricante de ZMGestion buscar órdenes de producción a partir de un producto, tela, lustre y estado.} %Resumen
 \renewcommand{\caseUsePeople}{Fabricantes: quiere encontrar una orden de producción existente en el sistema.} %Actor: Meta
