--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/buscarAvanzadoRemitos.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/buscarAvanzadoRemitos.tex
@@ -2,7 +2,7 @@
 
 \renewcommand{\caseUseCreated}{08/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{08/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUbuscarAvanzadoVentas - Buscar avanzado remitos} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU46 - Buscar avanzado remitos} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion buscar remitos a partir de un producto, tipo de remito, venta, cliente, un rango de fecha en la que se entregó o se creó el remito, ubicación, domicilio y estado.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere encontrar un remito existente en el sistema.} %Actor: Meta
