--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex
@@ -3,12 +3,12 @@
 
 \renewcommand{\caseUseCreated}{13/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{13/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUborrarVenta - Borrar venta} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU79 - Borrar venta} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion borrar una venta existente.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere borrar una venta.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoVentas\ (Buscar avanzado ventas).} %Precondiciones
+	\caseUseRow{Haber realizado con éxito el CU76\ (Buscar avanzado ventas).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
