--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/crearComprobante.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/crearComprobante.tex
@@ -8,7 +8,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion crear un comprobante.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: desea crear un comprobante} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoVentas\ (Buscar avanzado ventas).} %Precondiciones
+	\caseUseRow{Haber realizado con éxito el CU76\ (Buscar avanzado ventas).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
