--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/cancelarLineaVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/cancelarLineaVenta.tex
@@ -2,7 +2,7 @@
 
 \renewcommand{\caseUseCreated}{11/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{11/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUcancelarLineaVenta\ - Cancelar línea de venta} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU87\ - Cancelar línea de venta} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion cancelar una línea de venta.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere cancelar una línea de venta.} %Actor: Meta
