--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/crearLineaVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/crearLineaVenta.tex
@@ -3,7 +3,7 @@
 
 \renewcommand{\caseUseCreated}{13/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{13/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUcrearLineaVenta\ - Crear linea de venta.} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU84\ - Crear linea de venta.} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor crear una linea de venta para una venta determinada.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere crear una linea de venta.} %Actor: Meta
