--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/modificarLineaVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/modificarLineaVenta.tex
@@ -3,7 +3,7 @@
 
 \renewcommand{\caseUseCreated}{13/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{13/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUmodificarLineaVenta\ - Modificar linea de venta} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU85\ - Modificar linea de venta} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor modificar una linea de venta existente.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere modificar una linea de venta.} %Actor: Meta
