--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionObservaciones/crearObservacion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionObservaciones/crearObservacion.tex
@@ -11,7 +11,7 @@
     \begin{itemize}
         \item CU71 (Listar líneas de presupuesto).
         \item \CUlistarLineasVenta\ (Listar líneas de venta).
-        \item \CUlistarLineasOrdenProduccion\ (Listar líneas de orden de producción).
+        \item CU94\ (Listar líneas de orden de producción).
         \item \CUlistarLineasRemito\ (Listar líneas de remito.).
     \end{itemize} 
     } %Precondiciones
