--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarLineasOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarLineasOrdenProduccion.tex
@@ -3,7 +3,7 @@
 
 \renewcommand{\caseUseCreated}{05/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{05/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUlistarLineasOrdenProduccion - Listar líneas de orden de producción} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU94 - Listar líneas de orden de producción} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un fabricante de ZMGestion listar las líneas de órdenes de producción de una orden de producción determinada.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere listar las líneas de venta de una venta existente.} %Actor: Meta
