--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarTareasLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarTareasLineaOrdenProduccion.tex
@@ -3,11 +3,11 @@
 
 \renewcommand{\caseUseCreated}{03/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{03/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUlistarTareasLineaOrdenProduccion - Listar tareas de líneas de orden de producción } %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU97 - Listar tareas de líneas de orden de producción } %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a los fabricantes de ZMGestion listar las tareas de una línea de orden de producción existente.} %Resumen
 \renewcommand{\caseUsePeople}{Fabricantes: quiere listar las líneas de orden de producción.} %Actor: Meta
-\renewcommand{\caseUsePreconditions}{\caseUseRow{Haber realizado con éxito el \CUlistarLineasOrdenProduccion\ (Listar líneas de orden de producción).} %Precondiciones
+\renewcommand{\caseUsePreconditions}{\caseUseRow{Haber realizado con éxito el CU94\ (Listar líneas de orden de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
