--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/modificarOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/modificarOrdenProduccion.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador indica la orden de producción que desea modificar.}%1
-    \addCaseUseStep{Se ejecuta el \CUlistarLineasOrdenProduccion (Listar líneas de orden de producción) para la orden de producción indicada.}%2
+    \addCaseUseStep{Se ejecuta el CU94 (Listar líneas de orden de producción) para la orden de producción indicada.}%2
     \addCaseUseStep{Si el administrador desea agregar una linea de orden de producción ejecuta el \CUcrearLineaOrdenProduccion (Crear linea de orden de producción). Si el vendedor desea borrar una linea de orden de producción se ejecuta el \CUborrarLineaOrdenProduccion (Borrar linea de orden de producción). Si el administrador desea modificar una linea de orden de producción se ejecuta el \CUmodificarLineaOrdenProduccion (Modificar linea de orden de producción).}%3
     \addCaseUseStep{ZMGestion modifica la orden de producción y muestra un mensaje indicando el éxito de la operación.}%4
 }
