--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/transformarPresupuestosEnVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/transformarPresupuestosEnVenta.tex
@@ -17,8 +17,8 @@
     \addCaseUseStep{El vendedor indica uno o más presupuestos a partir de los cuales desea generar la venta.}
     \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione un cliente existente y se ejecuta el CU71 (Listar líneas de presupuesto) para cada presupuesto seleccionado, mostrando una opción por cada linea para indicar si desea añadirla a la venta.}
     \addCaseUseStep{El vendedor selecciona un cliente existente y las líneas de presupuestos que desea agregar a la venta.}
-    \addCaseUseStep{ZMGestion crea una venta en estado "En creación" para el cliente seleccionado, ejecuta el \CUcrearLineaVenta\ (Crear linea de venta) con los valores de producto, cantidad y precio de cada linea de presupuesto seleccionada.}
-    \addCaseUseStep{Si el vendedor desea modificar alguna de las líneas de venta agregadas ejecuta el \CUmodificarLineaVenta\ (Modificar linea de venta). Si el vendedor desea quitar alguna linea de venta agregada se ejecuta el \CUborrarLineaVenta\ (Borrar linea de venta). Si el vendedor desea agregar una nueva linea de venta se ejecuta el \CUcrearLineaVenta\ (Crear linea de venta).}
+    \addCaseUseStep{ZMGestion crea una venta en estado "En creación" para el cliente seleccionado, ejecuta el CU84\ (Crear linea de venta) con los valores de producto, cantidad y precio de cada linea de presupuesto seleccionada.}
+    \addCaseUseStep{Si el vendedor desea modificar alguna de las líneas de venta agregadas ejecuta el CU85\ (Modificar linea de venta). Si el vendedor desea quitar alguna linea de venta agregada se ejecuta el CU86\ (Borrar linea de venta). Si el vendedor desea agregar una nueva linea de venta se ejecuta el CU84\ (Crear linea de venta).}
     \addCaseUseStep{ZMGestión verifica que las líneas de ventas creadas tengan el precio actual del producto, en caso de que una o más líneas de venta tengan un precio distinto al precio actual, la venta se pasa al estado "En revisión", caso contrario se pasa al estado "Pendiente" y, en este caso, las líneas de presupuesto que se utilizaron para la venta se pasan al estado "Utilizadas" y las que no se utilizaron al estado "No utilizadas".}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
