--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/borrarTarea.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/borrarTarea.tex
@@ -2,12 +2,12 @@
 
 \renewcommand{\caseUseCreated}{05/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{05/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUborrarTarea - Borrar tarea} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU108 - Borrar tarea} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion borrar una tarea de una línea de orden de producción existente.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere borrar una tarea de una línea de orden de producción.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber ejecutado con éxito el \CUlistarTareasLineaOrdenProduccion (Listar tareas de línea de orden de producción).} %Precondiciones
+	\caseUseRow{Haber ejecutado con éxito el CU97 (Listar tareas de línea de orden de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
