--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/crearTarea.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/crearTarea.tex
@@ -7,7 +7,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion crear una tarea para una línea de orden de producción existente.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere crear una tarea para una línea de orden de producción.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber ejecutado con éxito el \CUlistarLineasOrdenProduccion (Listar líneas de orden de producción).} %Precondiciones
+	\caseUseRow{Haber ejecutado con éxito el CU94 (Listar líneas de orden de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
