--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/ejecutarTarea.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/ejecutarTarea.tex
@@ -7,7 +7,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un fabricante de ZMGestion indicar que se está por iniciar la ejecución de una tarea que se le asignó en una línea de orden de producción.} %Resumen
 \renewcommand{\caseUsePeople}{Fabricantes: quiere indicar que iniciará la ejecución de una tarea que se le asignó en una línea de orden de producción.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber ejecutado con éxito el \CUlistarTareasLineaOrdenProduccion (Listar tareas de línea de orden de producción).} %Precondiciones
+	\caseUseRow{Haber ejecutado con éxito el CU97 (Listar tareas de línea de orden de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
