--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/verificarTarea.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/verificarTarea.tex
@@ -7,7 +7,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion verificar la finalización de una tarea que fue asignada previamente como finalizada por un fabricante.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere verificar la finalización de una tarea.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber ejecutado con éxito el \CUlistarTareasLineaOrdenProduccion (Listar tareas de línea de orden de producción).} %Precondiciones
+	\caseUseRow{Haber ejecutado con éxito el CU97 (Listar tareas de línea de orden de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
