--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex
@@ -18,7 +18,7 @@
     \addCaseUseStep{ZMGestion muestra un formulario autocompletado para que el usuario modifique el cliente y las observaciones. Indicando que el campo de clientes es obligatorio.}%2
     \addCaseUseStep{El vendedor modifica el cliente y las observaciones.}%3
     \addCaseUseStep{Se ejecuta el \CUlistarLineasVenta\ (Listar líneas de venta) para la venta seleccionada.}%4
-    \addCaseUseStep{Si el vendedor desea modificar una linea, ejecuta el \CUmodificarLineaVenta\ (Modificar linea de venta), si desea borrar una linea ejecuta el \CUborrarLineaVenta\ (Borrar linea de venta) y si desea agrear una linea ejecuta el \CUcrearLineaVenta\ (Crear linea de venta).}%5
+    \addCaseUseStep{Si el vendedor desea modificar una linea, ejecuta el CU85\ (Modificar linea de venta), si desea borrar una linea ejecuta el CU86\ (Borrar linea de venta) y si desea agrear una linea ejecuta el CU84\ (Crear linea de venta).}%5
     \addCaseUseStep{ZMGestion modifica la venta y muestra un mensaje indicando el éxito de la operación.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
