--- a/Informe Final/Capitulos/Anexo/Anexo.tex
+++ b/Informe Final/Capitulos/Anexo/Anexo.tex
@@ -95,6 +95,10 @@
 \input{Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex}
 
+\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/crearLineaVenta.tex}
+\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/borrarLineaVenta.tex}
+\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/cancelarLineaVenta.tex}
+
 \input{Capitulos/Capitulo4/CasosUso/GestionComprobantes/buscarAvanzadoComprobantes.tex}
 
 %GestionObservaciones
@@ -102,14 +106,20 @@
 \input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/listarObservaciones.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/borrarObservacion.tex}
 
+\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/crearOrdenProduccion.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/modificarOrdenProduccion.tex}
+\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarLineasOrdenProduccion.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/borrarOrdenProduccion.tex}
 
 %GestionLineasOrdenesProduccion
 \input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/modificarLineaOrdenProduccion.tex}
 \input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/borrarLineaOrdenProduccion.tex}
+
+\input{Capitulos/Capitulo4/CasosUso/GestionTareas/borrarTarea.tex}
+\input{Capitulos/Capitulo4/CasosUso/GestionTareas/cancelarTarea.tex}
+
 
 \section*{Descripción de escenarios}
 \input{Capitulos/Capitulo4/DescripcionesEscenarios/AD-01-00.tex}
