--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/borrarLineaVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/borrarLineaVenta.tex
@@ -3,7 +3,7 @@
 
 \renewcommand{\caseUseCreated}{13/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{13/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUborrarLineaVenta\ - Borrar linea de venta} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU86\ - Borrar linea de venta} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion borrar una linea de venta.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere borrar una linea de venta.} %Actor: Meta
