--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/crearOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/crearOrdenProduccion.tex
@@ -2,7 +2,7 @@
 
 \renewcommand{\caseUseCreated}{02/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{02/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUcrearOrdenProduccion - Crear orden de producción} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{CU91 - Crear orden de producción} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion crear una orden de producción.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere crear una orden de producción.} %Actor: Meta
