--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/reanudarTarea.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTareas/reanudarTarea.tex
@@ -7,7 +7,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion reanudar la ejecución de una tarea en una línea de orden de producción existente.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere reanudar la ejecución de una tarea en una línea de orden de producción.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber ejecutado con éxito el \CUlistarTareasLineaOrdenProduccion (Listar tareas de línea de orden de producción).} %Precondiciones
+	\caseUseRow{Haber ejecutado con éxito el CU97 (Listar tareas de línea de orden de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
