Cambios descripción uso de herramientas

--- a/Informe Final/Capitulo8.tex
+++ b/Informe Final/Capitulo8.tex
@@ -41,7 +41,7 @@ expertos en el área.
 Por otro lado, otro reto que se presentó fue el despliegue del sistema utilizando servicios CI/CD automatizado. Para resolver esta problemática se investigó y se realizaron diversas pruebas hasta lograr el objetivo. 
 
 \paragraph\indent
-Por último el uso de lenguajes de programación modernos, sin conocimientos previos, obligó a realizar una capacitación en ellos.
+Por último al trabajar con flutter, un framework bastante moderno y tener pocos años de experiencia en él, obligó a profundizar más en el mismo.
 
 % Objetivos:
 % Desarrollar un sistema (mediante el uso de tecnologias web) para una mueblería, con el fin de optimizar el proceso de manejo de stock, presupuestos,  ventas y entrega de productos, y que cumpla con las siguientes características:
