--- a/Informe Final/Capitulos/Capitulo6/cap6sec1.tex
+++ b/Informe Final/Capitulos/Capitulo6/cap6sec1.tex
@@ -3,9 +3,13 @@
 	Independientemente del paradigma de la ingeniería del software, el lenguaje de programación tendrá impacto en la planificación, el análisis, el diseño, la codificación, la prueba y el mantenimiento de un proyecto. Los lenguajes elegidos para la construcción del sistema fueron:
 
 		\begin{itemize}
-			\item Golang: es un lenguaje de programación concurrente y compilado inspirado en la sintaxis de C, que intenta ser dinámico como Python y con el rendimiento de C o C++. Ha sido desarrollado por Google y sus diseñadores iniciales fueron Robert Griesemer, Rob Pike y Ken Thompson. Actualmente está disponible en formato binario para los sistemas operativos Windows, GNU/Linux, FreeBSD y Mac OS X, pudiendo también ser instalado en estos y en otros sistemas mediante el código fuente.
-			\item MySQL: es un sistema de gestión de bases de datos relacional desarrollado bajo licencia dual: Licencia pública general/Licencia comercial por Oracle Corporation y está considerada como la base de datos de código abierto más popular del mundo, y una de las más populares en general junto a Oracle y Microsoft SQL Server, todo para entornos de desarrollo web.
-			\item Dart: es un lenguaje de programación de código abierto, desarrollado por Google. Fue relevado en la conferencia goto; en Aarhus, Dinamarca el 10 de octubre de 2011. El objetivo de Dart no es reemplazar JavaScript como el principal lenguaje de programación web en los navegadores web, sino ofrecer una alternativa más moderna. El espíritu del lenguaje puede verse reflejado en las declaraciones de Lars Bak, ingeniero de software de Google, que define a Dart como un "lenguaje estructurado pero flexible para programación Web".
+			\item Golang: es un lenguaje de programación concurrente y compilado inspirado en la sintaxis de C, que intenta ser dinámico como Python y con el rendimiento de C o C++. Ha sido desarrollado por Google y sus diseñadores iniciales fueron Robert Griesemer, Rob Pike y Ken Thompson. Actualmente está disponible en formato binario para los sistemas operativos Windows, GNU/Linux, FreeBSD y Mac OS X, pudiendo también ser instalado en estos y en otros sistemas mediante el código fuente. 
 			
-	Se utiliza principalmente en su forma del lado del cliente, implementado como parte de un navegador web permitiendo mejoras en la interfaz
+			Se eligió este lenguaje debido a que se trabajó con el durante la pasantía. Además, de acuedo a la revista IEEE Spectrum, Go se encuentra en el top 10 de los lenguajes de programación más demandados en la actualidad.
+			\item MySQL: es un sistema de gestión de bases de datos relacional desarrollado bajo licencia dual: Licencia pública general/Licencia comercial por Oracle Corporation y está considerada como la base de datos de código abierto más popular del mundo, y una de las más populares en general junto a Oracle y Microsoft SQL Server, todo para entornos de desarrollo web. 
+			
+			Se eligió MySQL por su escablabilidad, flexibilidad y gran performance. Además se utilizó el motor de almacenamiento InnoDB, el cual opera con transacciones ACID y se adapta perfectamente a las necesidades de este sistema.
+			\item Dart: es un lenguaje de programación de código abierto, desarrollado por Google. Fue relevado en la conferencia goto; en Aarhus, Dinamarca el 10 de octubre de 2011. El objetivo de Dart no es reemplazar JavaScript como el principal lenguaje de programación web en los navegadores web, sino ofrecer una alternativa más moderna. El espíritu del lenguaje puede verse reflejado en las declaraciones de Lars Bak, ingeniero de software de Google, que define a Dart como un "lenguaje estructurado pero flexible para programación Web". Se utiliza principalmente en su forma del lado del cliente, implementado como parte de un navegador web permitiendo mejoras en la interfaz. 
+			
+			Durante la práctica profesional supervisada, se utilizó Dart junto con el framework Flutter para el desarrollo de aplicaciones móviles. El framework también cuenta con una versión para el desarrollo de aplicaciones web, con el objetivo de probar dicha funcionalidad se eligió Dart.
 		\end{itemize}
